--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
                         <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19.-->
-                        <form id="contactForm" name="sentMessage" novalidate="novalidate" data-netlify="true">
+                        <form id="contactForm" action="https://mailthis.to/" name="sentMessage" novalidate="novalidate" data-netlify="true">
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
                                     <label>Name</label>
