readd new darkmode

--- a/index.html
+++ b/index.html
@@ -441,6 +441,7 @@
         <script src="assets/mail/jqBootstrapValidation.js"></script>
         <script src="assets/mail/contact_me.js"></script>
         <!-- Core theme JS-->
+        <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
         <script src="js/scripts.js"></script>
     </body>
 </html>
