add badge website

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/MSPW.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Back in 2nd year college, I applied and passed the certification from Microsoft in Powerpoint and it is my first certification under my name. </p>
+                                    <p class="mb-5">Back in 2nd year college, I applied and passed the certification from Microsoft in Powerpoint and it is my first certification under my name. Check it out <a href="https://www.youracclaim.com/users/jether-de-leon/badges">here</a></p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -433,7 +433,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/MSW.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">In my 2nd year college, I passed another certification from Microsoft which is the word. It is my 2nd certificate under my name. </p>
+                                    <p class="mb-5">In my 2nd year college, I passed another certification from Microsoft which is the word. It is my 2nd certificate under my name. Check it out <a href="https://www.youracclaim.com/users/jether-de-leon/badges">here</a></p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
