--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="icon" type="image/png" href="images/favicon.ico" sizes="32x32">
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
-				<h1><a href="#intro">Jether Haniel</a></h1>
+				 <h1><a href="#intro">Jether Haniel</a></h1>
 				<nav>
 					<ul>
 						<li><a href="#one">What I Do</a></li>
@@ -97,7 +98,6 @@
 								<a class="fab fa-npm"></a>
 							</article>
 						</div>
-
 				</div>
 			</section>
 
