edit logo and edit footer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 		<!-- Header -->
 			<header id="header">
-				 <h1><a href="#intro">Jether Haniel</a></h1>
+				 <a href="#intro">
+				 <img src="images/JHDLogo.png" class="logo">
+				</a>
 				<nav>
 					<ul>
 						<li><a href="#one">What I Do</a></li>
@@ -109,7 +111,7 @@
 						<p>Get in touch with me here or in my social media websites!</p>
 					</header>
 					<div class="box">
-						<form method="post" action="#">
+						<form method="post" action="https://formspree.io/f/xbjpqpqn">
 							<div class="fields">
 								<div class="field half"><input type="text" name="name" placeholder="Name" /></div>
 								<div class="field half"><input type="email" name="email" placeholder="Email" /></div>
@@ -128,15 +130,16 @@
 
 				<!-- Icons -->
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://twitter.com/JetherHaniel" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.facebook.com/JetherHaniel/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/jep.hans/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://github.com/Haniel023" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li>&copy; Jether Haniel</li>
 					</ul>
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li>&copy; Jether Haniel</li><li></li>
+						<li><a href="#intro"> <img src="images/JHDLogo.png" class="logo"></a></li>
 					</ul>
 
 			</footer>
