--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<header>
 						<h2>What I Do</h2>
 					</header>
-					<p>I can do basic to intermediate creation in webpages, currently studying in handling databases, and app development. I'm also a video editor, photo edito and short film maker.</p>
+					<p>I can do basic to intermediate creation in webpages, currently studying in handling databases, and app development. I'm also a video editor, photo editor and short film maker.</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
