add new sections in about

--- a/index.html
+++ b/index.html
@@ -12,15 +12,11 @@
 
 		<!-- Header -->
 			<header id="header">
-				 <a href="#intro">
-				 <img src="images/JHDLogo.png" class="logo">
-				</a>
+				 <h1><a href="#intro">J.Haniel</a></h1>
 				<nav>
 					<ul>
 						<li><a href="#one">What I Do</a></li>
 						<li><a href="#two">Who I Am</a></li>
-						<li><a href="#work">My Work</a></li>
-						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -100,6 +96,37 @@
 								<a class="fab fa-npm"></a>
 							</article>
 						</div>
+
+						<header>
+							<h2>Projects</h2>
+							<p>These are all the projects I've been part of.</p>
+						</header>
+
+						<!-- Projects -->
+						<div class="gallery">
+							<article class="from-left">
+								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="The Project: Guardian (2019)" alt="" /></a>
+							</article>
+							<article class="from-right">
+								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Guardians (2020)" alt="" /></a>
+							</article>
+						</div>
+
+							<header>
+								<h2>Certifications</h2>
+								<p>These are all the certifications I received.</p>
+							</header>
+
+						<!-- Certifications -->
+						<div class="gallery">
+							<article class="from-left">
+								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.png" title="Microsoft: Office Specialist" alt="" /></a>
+							</article>
+							<article class="from-right">
+								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.png" title="Microsoft: Office Specialist" alt="" /></a>
+							</article>
+						</div>
+
 				</div>
 			</section>
 
