fix typo mistake

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<header>
 						<h2>Jether Haniel</h2>
 					</header>
-					<p>Your future <strong>Programmer and Developer</strong><br /></p>
+					<p>Your future <strong>Programmer</strong> and <strong>Developer</strong><br /></p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
